# django-gestao-ambiental

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  fly.toml  makefile  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/ac_extintores/: apps.py  filters.py  forms.py  models.py  urls.py  views.py
apps/agua/: forms.py  models.py
apps/cidades/: apps.py  estados_brasileiros.py  models.py  urls.py  views.py
apps/cluster/: forms.py  models.py  views.py
apps/eletricidade/: filters.py  forms.py  models.py
apps/entrada/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
apps/fornecedor/: admin.py  forms.py  models.py  urls.py  views.py
apps/fugitivas/: apps.py  models.py
apps/gas_sf6_nf3/: apps.py  filters.py  forms.py  models.py  urls.py  views.py
apps/home/: models.py  views.py
apps/saida/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
apps/tipo_residuos/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
apps/unidade_consumo/: urls.py  views.py
apps/users/: forms.py  urls.py  views.py
apps/utils/: models.py
core/: menus.py  settings.py  urls.py
gestao_ambiental/: asgi.py  menus.py  settings.py  sidebar.py  urls.py  wsgi.py
gestao_ambiental/scss/: volt.scss
middlewares/: login_required.py
templates/: base.html  base_card.html
templates/ac_extintores/: create.html  edit.html  index.html
templates/agua/: create.html  edit.html  index.html
templates/cluster/: create.html  edit.html  index.html
templates/eletricidade/: create.html  edit.html  index.html
templates/entrada/: create.html  edit.html  entrada_cadastro.html  index.html
templates/fornecedor/: create.html  edit.html  fornecedor_cadastro.html  index.html
templates/gas_sf6_nf3/: create.html  index.html
templates/home/: home.html
templates/partials/: buttons_list_view.html  export_modal.html  footer.html  form_errors.html  navbar.html  navigation.html  scripts.html  sidebar.html
templates/saida/: create.html  edit.html  index.html  (+3 more)
templatetags/: django_version.py  is_checkbox.py  load_menu.py  load_sidebar.py  page_parser.py  project_version.py  split.py
(+53 files in other folders)
