[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gestao_ambiental"
description = "Django Gestao Ambiental"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = [
    "Django<5.0",
    "django-filter",
    "django-environ",
    "gunicorn",
    "plotly",
    "django-plotly-dash",
    "whitenoise",
    "psycopg[binary]"
]

[project.optional-dependencies]
dev = ["pre-commit", "pre-commit-hooks", "docformatter", "ruff", "djlint", "pip-tools"]

[tool.setuptools.dynamic]
version = { attr = "gestao_ambiental.version.__version__" }

[tool.setuptools]
py-modules = []

[tool.ruff.format]
exclude = ["*.pyi"]
